separated the h4 font size in styles to fix spacing

--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -25,8 +25,13 @@ li {
     font-size: 10pt;
 }
 
-h2, h3, h4 {
+h2, h3 {
     font-size: 18pt;
+    font-weight: bold;
+}
+
+h4 {
+    font-size: 16pt;
     font-weight: bold;
 }
 
